fix: z-index issue between card images and navbar

--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -5,6 +5,7 @@
     border-radius: 1.5em;
     display: grid;
     place-items: center;
+    z-index: -1;
     cursor: pointer;
 
 
